fix alignment plugin

--- a/src/itutorEditor/plugins/alignmentPlugin.css
+++ b/src/itutorEditor/plugins/alignmentPlugin.css
@@ -8,6 +8,13 @@
 .iTutor-editor-align-right {
     display: flex;
     justify-content: flex-end;
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
+    word-break: break-all;
+}
+
+.iTutor-editor-align-center {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     word-break: break-all;
 }
